# fetchme-rs

./: Cargo.toml
src/: main.rs
