[package]
name = "fetchme-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-unit = { version = "5.2.0", default-features = false, features = ["byte"] }
nom = "8.0.0"
pci-info = { version = "0.3.4"}
procfs = { version = "0.18.0", default-features = false }
xcb = {version = "1.7.0", features = ["randr"]}

[dependencies.nix]
version = "0.31.2"
features = [
  "dir",
  "env",
  "feature",
  "fs",
  "hostname",
  "mount",
  "process",
  "pthread",
  "term",
  "time",
  "user",
  "zerocopy"
]

[dependencies.chrono]
version = "0.4.44"
default-features = false
features = ["std", "libc"]

[lints.rust]
# unused_crate_dependencies = "warn"

[lints.clippy]
# Cargo
wildcard_dependencies = "warn"
# cargo_common_metadata = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
# print_stderr = "warn"
# print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
unnecessary_debug_formatting = "allow"
missing_panics_doc = "allow"

